# spf

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cachestats.sh  commands  generate_data.py  pyproject.toml  requirements.txt  requirements.txt_old  rf_torch.py  run.sh  simple_network.py  single_point.yaml  turn_table_array.scad
data_collection_experiments/: README.md
data_collection_model_and_results/: README.md
filter_reports/: analyze_PF_report.ipynb
images/: session_generated_data_dec2023.txt  session_real_data_dec19_2023.txt
infra/: commands
latest_configs/: dec19_single_config_windowedbeamformer.yaml  dec19_single_config_windowedbeamformer_smaller.yaml  dec1_single_config_sigma0p05_rerun_3p31.yaml  dec1_single_config_sigma0p05_rerun_3p3_windows_norm.yaml  dec26_single_config_windowedbeamformer.yaml  dec28_single_config_windowedbeamformer.yaml  dec28_single_config_windowedbeamformer_nosig.yaml  dec3_single_config_sigma0p05_rerun_3p4.yaml  dec3_single_config_sigma0p05_rerun_3p4_windows_beamformerwindow.yaml  dec3_single_config_sigma0p05_rerun_3p4_windows_beamformerwindow_fix.yaml  dec3_single_config_sigma0p05_rerun_3p4_windows_beamformerwindow_nophase_nobeam_noempirical_nospacing_fix.yaml  dec3_single_config_sigma0p05_rerun_3p4_windows_beamformerwindow_nophase_nobeam_noempirical_nospacing_normalized_fix_big.yaml  dec3_single_config_sigma0p05_rerun_3p4_windows_beamformerwindow_nophase_nobeam_noempirical_nospacing_normalized_fix_big2_long.yaml  dec3_single_config_sigma0p05_rerun_3p4_windows_hidden64.yaml  dec4_paired_sigma0p05_rerun_3p4.yaml  (+54 more)
(+773 files in other folders)
