[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spf"
version = "0.0.1"
dependencies = [
 "pytest",
 "numpy>=1.25",
 "docker",
 "matplotlib",
 "pyyaml",
 "haversine",
 "torch>=2.2",
 "shapely",
 "attrs",
 "pymavlink>=2.4.42",
 "pyserial",
 "tqdm",
 "numba",
 "scipy",
 "zarr<=2.18.4", # newer versions remove support for lmdb
 "pyadi-iio",
 "pyproj",
 "compress-pickle",
 "deepdiff",
 "torchvision",
 "lmdb",
 "pandas",
 "pytest-console-scripts",
 "pre-commit",
 "tensordict",
 "filterpy",
 "wandb",
#"cupy"
]
requires-python = ">=3.10"
description = "Signal Processing Fun"
readme = "README.md"

